--- a/my-app/src/styles/MainPageCss.css
+++ b/my-app/src/styles/MainPageCss.css
@@ -110,6 +110,110 @@
         margin-left: 5.5px;
     }
 }
+/* phone */
+@media screen and (max-width:415px) and (min-width:362px) {
+    /* 메인페이지  */
+
+    .MainPage{
+        width: 360px !important;
+        margin: 0 auto;
+    } 
+    .AllToon{  
+        width: 80% !important;
+        margin: 0 auto;
+        background-color: red;
+        
+    }
+    .AllToon table{
+        margin: 0 !important;
+    }
+    tr {
+        width: 100% !important;
+      }
+    td{
+        width: 100% !important; 
+    }
+/* test */
+    
+    .AllToonInfo {
+        margin-top:6% !important;
+        width: calc(37.3% - 15px) !important; /* 각 요소의 너비를 33.3%로 설정 (여백 10px 제외) */
+        margin-bottom: 10px; /* 요소들 사이의 간격 설정 */
+        display: flex;
+        flex-wrap: wrap; /* 요소들을 여러 줄로 감싸기 */
+    }
+    .AllToonInfo img{
+        width: 40vw !important; /* 이미지를 부모 요소에 꽉 차게 설정 */
+        height: 18vw !important; /* 이미지 비율 유지 */
+    }
+    table{ 
+        margin: 0 !important;
+    }
+    /* 데이페이지 */
+    .DayBox{
+        width: 360px !important;
+    }
+
+    .HHH{
+        width: 20% !important;
+        font-size: 1px !important        ;
+        float: left !important;
+    }
+    .DayToonItem{
+        width: 100% !important;
+        float: left !important;
+        
+    }
+    .DayToonItem img{
+        position: relative;
+        top:0px;
+
+        width: 100% !important;
+        height: 20vw !important;
+    }
+    .RBox{
+        display: block;
+    }
+    .Rank{
+        width:12vw !important;
+        float: left !important;
+    }
+    .Rank .RankImg{
+        width: 70vw !important;
+    }
+    .RBox{
+        float: left;
+        width: 30% !important;
+    }
+    .Rankitem{
+        margin-top: 10px !important;
+        float: left !important;
+        width:30vw;
+    }
+    .RankText{
+        font-size: 1px;
+        width: 11vw !important;
+        line-height: 8vw;
+        margin-left: 3vw !important;
+    }
+    .Mid{
+        float: left;
+        width: 100% !important;
+    }
+
+    /* 태그페이지 */
+    .tag{
+        width: 80% !important;
+    }
+    .tagItem li{
+        width: 8.7vw !important ;
+        /* margin-right: 1.5vw !important; */
+        margin-left: 5.5px;
+    }
+}
+
+
+
 
 
 @media screen and (max-width:361px) and (min-width:10px) {
@@ -144,7 +248,7 @@
         flex-wrap: wrap; /* 요소들을 여러 줄로 감싸기 */
     }
     .AllToonInfo img{
-        width: 10230vw !important; /* 이미지를 부모 요소에 꽉 차게 설정 */
+        width: 40vw !important; /* 이미지를 부모 요소에 꽉 차게 설정 */
         height: 18vw !important; /* 이미지 비율 유지 */
     }
     table{ 
