--- a/my-app/src/styles/MainPageCss.css
+++ b/my-app/src/styles/MainPageCss.css
@@ -415,28 +415,38 @@ tr{
     float: left;
     margin: 0 auto;
 }
+/* 미디어쿼리 포인트 */
+
 .DayToon{
-    margin-top: 1px;
-    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: rebeccapurple;
+    width: calc(50% - 20px); /* 전체 너비에서 Rank 영역의 너비와 여백을 뺀 값으로 설정 */
     float: left;
 }
-.DayToon table{
-    display: inline-block;
-    width: 100%;
-}
+.DayToonBox{
+    flex-wrap: wrap;
+    background-color: rebeccapurple;
+    width: calc(50% - 10px); /* 전체 너비에서 Rank 영역의 너비와 여백을 뺀 값으로 설정 */
+    float: left;
+} 
+
 .Mid .DayToon .DayToonItem {
     width: 6vw;
     height: 8vw;
-    float: left;
-    margin-right: 10px;
+    margin-bottom: 50px;
+  }
 
+  .Mid .DayToon .DayToonItem.second-item {
+    margin-left: 20px;
   }
   
+  
   .Mid .DayToon .DayToonItem img {
-    background-color: yellow;
     width: 100%;
     height: 100%;
-    float: left;
+    object-fit: cover ; /* 이미지를 부모 요소에 꽉 차도록 조절 */
+
   }
   .DayToonItem p{
     float: left;font-size: 10px;
@@ -447,6 +457,8 @@ tr{
     width: 20%;
     margin-top: 20px;
 }
+/* 미디어쿼리 포인트 */
+
 
 
 
