--- a/my-app/src/styles/MainPageCss.css
+++ b/my-app/src/styles/MainPageCss.css
@@ -19,7 +19,6 @@
     .AllTonnbox{
 
         width: 100% !important;
-        background-color: blue;
     }
     .ToonTitle{
         margin-left: 10% !important;margin-top: 3% !important;
@@ -30,14 +29,12 @@
         flex-wrap: wrap; /* 넘치는 요소를 여러 줄로 감싸기 */
         justify-content: space-between;
          /* 요소들을 간격을 유지하면서 정렬 */
-         background-color: red;
       }
 
   
     .AllToon{  
         width: 80% !important;
         margin: 0 auto;
-        background-color: rebeccapurple;
     }
     .AllToon table{
         margin: 0 !important;
@@ -64,20 +61,17 @@
         display: flex !important; /* 요소들을 가로 방향으로 배치하기 위해 flexbox를 사용합니다 */
         justify-content: space-between ; /* 요소들을 양쪽으로 붙이도록 설정합니다 */
         align-items: flex-start; /* 요소들을 위쪽으로 정렬합니다 */
-        background-color: beige;
         width: 80% !important;
       }
     
     .DayToon{
         flex-wrap: wrap;
         width: 50% !important;
-        background-color: red;
     }
     
     
     .DayToonBox{
         width: 100% !important;
-        background-color: green !important;
         float: left;
     } 
     .DayToonItem p{
@@ -216,7 +210,7 @@
     }
     .RBox{
         float: left;
-        width: 30% !important;
+        width: 40% !important;
     }
     .Rankitem{
         margin-top: 10px !important;
@@ -250,6 +244,9 @@
 
 
 @media screen and (max-width:361px) and (min-width:10px) {
+    .Mid .DayToon .DayToonItem.second-item {
+        margin-left: 0px !important;
+      }
     /* 메인페이지  */
 
     .MainPage{
@@ -259,18 +256,9 @@
     .AllToon{  
         width: 80% !important;
         margin: 0 auto;
-        background-color: red;
         
     }
-    .AllToon table{
-        margin: 0 !important;
-    }
-    tr {
-        width: 100% !important;
-      }
-    td{
-        width: 100% !important; 
-    }
+
     
     
     .AllToonInfo {
@@ -293,28 +281,26 @@
     }
 
     .Mid {
-        
         display: flex !important; /* 요소들을 가로 방향으로 배치하기 위해 flexbox를 사용합니다 */
         justify-content: space-between ; /* 요소들을 양쪽으로 붙이도록 설정합니다 */
         align-items: flex-start; /* 요소들을 위쪽으로 정렬합니다 */
-        background-color: beige;
         width: 80% !important;
       }
     
     .DayToon{
-        width: 45vw !important;
+        width: 35vw !important;
         flex-wrap: wrap;
-        background-color: red;
+        float: left ; 
     }
     
     
     .DayToonBox{
-        width: 100% !important;
-        background-color: green !important;
         float: left;
+        width: 25vw !important;
+
     } 
     .DayToonItem p{
-        font-size: 15px !important;
+        font-size: 10px !important;
         text-align: left;
       }
     .Writer{
@@ -326,35 +312,55 @@
     }
     .Mid .DayToon .DayToonItem {
         width: 100% !important;
-        height:250px !important;
+        height:160px !important;
         margin-bottom: 50px;
       }
     
-      .Mid .DayToon .DayToonItem.second-item {
+      /* .Mid .DayToon .DayToonItem.second-item {
         margin-left: 20px;
-      }
+      } */
     .RBox{
         float: left !important;
     }
-    .Rank{
+    .Rank {
+        position: relative;
+        right: 6vw;
         
-        float: left !important;
-    }
-    .Rank .RankImg{
-        width: 60vw;
-    }
-    .RankText{
-        width: 30vw !important;
-        float: left !important;
-    }
-    .RankNum{
-        width: 0% !important;
-        float: left !important;
-    }
+        display: flex;
+        align-items: center; /* 요소들을 수직 정렬합니다 */
+}
+
+.Rank .RankImg {
+  width: 60vw;
+  height: auto; /* 이미지의 높이를 자동으로 조정합니다 */
+}
+
+.RankText {
+  width:30% !important;
+  float: left !important;
+  font-size: 10px !important;
+  height: 60px; /* 텍스트 영역의 고정 높이를 설정합니다 */
+  line-height: 60px; /* 텍스트를 수직 가운데로 정렬합니다 */
+}
+.RankText p {
+    width: 20vw !important;
+    margin-top: 4.5vw;
+}
+.Rankitem{
+    float: left !important;
+    width: 37vw !important; 
+}
+.RankNum {
+  width: 25% !important;
+  font-size: 10px;
+  float: left !important;
+  height: 60px; /* 순위 영역의 고정 높이를 설정합니다 */
+  line-height: 60px; /* 순위를 수직 가운데로 정렬합니다 */
+}
     .HHH{
-        margin-top: 6%;
+        width: 60% !important;
+        margin-top: 14%;
         float: left !important;
-        margin-left: 6.5% !important;
     }
 
 }
@@ -418,7 +424,6 @@ table , th ,td ,td{
     width:7.5vw;
     height: 10vw;
     float: left;
-    background-color: black;
     text-align: center;
     border-collapse:collapse;
     
@@ -462,13 +467,11 @@ tr{
     flex-wrap: wrap;
     width: calc(50% - 15px); /* 전체 너비에서 Rank 영역의 너비와 여백을 뺀 값으로 설정 */
     float: left;
-    background-color: red;
 }
 
 
 .DayToonBox{
     flex-wrap: wrap;
-    background-color: rebeccapurple;
     width: calc(45% - 10px); /* 전체 너비에서 Rank 영역의 너비와 여백을 뺀 값으로 설정 */
     float: left;
 
@@ -481,7 +484,7 @@ tr{
   }
 
   .Mid .DayToon .DayToonItem.second-item {
-    margin-left: 20px;
+    margin-left: 0px;
   }
   
   
@@ -499,7 +502,6 @@ tr{
     bottom: 21px;
     float: right;
     width:51%;
-    background-color: aqua;
   }
   .Rank {
 
@@ -550,3 +552,7 @@ tr{
 .ToonTitle{
     float: left;
 }
+    
+      .Mid .DayToon .DayToonItem.second-item {
+        margin-left: 20px;
+      }
