--- a/my-app/src/styles/NewToonCss.css
+++ b/my-app/src/styles/NewToonCss.css
@@ -52,3 +52,18 @@
     top: 0px;
   }
   
+
+
+
+  
+.slider{position:relative;width:600px;height:400px;border:1px solid #f00}
+ul{list-style:none}
+ul>li{position:absolute;overflow:hidden;width:150px;border:1px solid #333;cursor:pointer}
+ul>.click{cursor:default}
+.item1{top:149px;height:100px;left:60px;z-index:1;background:#0f0}
+.item2{top:129px;height:140px;left:120px;z-index:2;background:#ff0}
+.item3{top:99px;height:200px;left:180px;z-index:3;background:#cc66ff}
+.item4{top:129px;height:140px;left:240px;z-index:2;background:#dcdcdc}
+.item5{top:149px;height:100px;left:300px;z-index:1;background:#444}
+.txt{display:none;position:absolute;padding:4px;bottom:-40px;left:0;width:100%;height:40px;background:#000;color:#fff;text-align:center;}
+.text-box{position:absolute;margin-left:-100px;left:50%;width:200px;height:100px;color:#fff;background:#000}
