--- a/my-app/src/pages/ListPage/styles/ListPageCss.css
+++ b/my-app/src/pages/ListPage/styles/ListPageCss.css
@@ -49,11 +49,11 @@
     }
     .List{
         margin-top: 5%;
-        width: 80% !important;
+        width: 75% !important;
     }
     .ListItem{
         position: relative;
-        right: 15vw;
+        right: 36% !important;
     }
 
 
@@ -223,7 +223,7 @@
     }
     .ListItem{
         position: relative;
-        right: 8vw;
+        right:27% !important; 
         width: 100%;
     }
     .ListImg {
@@ -253,8 +253,10 @@
     }
 }
 
+
+
 .ListPage{
-    width: 100%;
+    width: 90%;
     margin: 0 auto;
 }
 .ListInfo{
@@ -273,7 +275,8 @@
 
     float: left;
     width: 100%;
-    background-color: ivory;
+
+
     height: 160px;
     margin-right: 15px;
 }
@@ -360,9 +363,9 @@ li{
     width: 10%;
 }
 .ListItem{
-    width: 100%;
+    position: relative;
+    right: 11%;
     height: 80px;
-    padding: 3px;
     border-bottom: 1px solid rgb(230, 226, 226);
 }
 .ListItem .ListImg img{
