--- a/my-app/src/styles/NewToonCss.css
+++ b/my-app/src/styles/NewToonCss.css
@@ -1,66 +1,106 @@
+@media screen and (max-width:721px) and (min-width:420px) {
+  .MNewToon{
+    width: 720px;
+  }
+  .NewToonPage
+  {
+    width: 80% !important;
+    margin: 0 auto;
+    float: left;
+  }
+
+
+}
+@media screen and (max-width:419px) and (min-width:363px) {
+  .MNewToon{
+    width: 400px;
+  }
+  .NewToonPage
+  {
+    width: 80% !important;
+    margin: 0 auto;
+    float: left;
+  }
+  .NewToonInfo {
+    width: 100%  !important;
+    height: 100px !important;
+    align-items: center;
+    float: left !important;
+    margin-left: 17% !important;
+    justify-content: center;
+    cursor: pointer;
+  }
+
+
+}
+@media screen and (max-width:361px) and (min-width:100px) {
+  .MNewToon{
+    width: 360px;
+  }
+  .NewToonPage
+  {
+    width: 80% !important;
+    margin: 0 auto;
+    height: 100px !important;
+    
+    float: left;
+  }
+  .NewToonInfo {
+    width: 100%  !important;
+    height: 100px !important;
+    align-items: center;
+    float: left !important;
+    margin-left: 17% !important;
+    justify-content: center;
+    cursor: pointer;
+  }
+
+  .NewToonItem img{
+    max-width: 200%;
+    height: 100px !important;
+  }
+
+
+}
+
+
 .NewToonPage {
-  background-color: yellow;
   width: 100%;
   display: flex;
   justify-content: center;
 }
-
 .slider {
   display: flex;
+  justify-content: center;
+}
+
+.NewToonInfo.active {
+  transform: translateX(calc(100% /33.3%));
 }
 
 .NewToonInfo {
-  width: 30%;
+  width: 100%;
   height: 180px;
-  background-color: aqua;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
 }
 
-.NewToonInfo.active {
-  background-color: pink;
-}
+
 
 .NewToonItem {
   width: 100%;
   height: 100%;
-  background-color: rebeccapurple;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .NewToonInfo img {
-  height: 150px;
-
+  height: 170px;
   border: 1px solid #000;
   background-color: red;
   object-fit: contain;
 }
 
-@media screen and (max-width: 767px) {
-  .NewToonInfo {
-    flex: 0 0 100%;
-  }
-}
-.slide-animation {
-  transition: transform 0.5s;
-}
-
-.slide-animation .NewToonInfo {
-  transition: transform 0.5s;
-}
-
-.slide-animation .NewToonInfo:first-child {
-  transform: translateX(90%);
-}
-
-.slide-animation .NewToonInfo:last-child {
-  transform: translateX(50%);
-}
-
-.slide-animation .NewToonInfo.active {
-  transform: translateX(0);
-}
