--- a/my-app/src/pages/WebToonPage/styles/ClickLayoutCss.module.css
+++ b/my-app/src/pages/WebToonPage/styles/ClickLayoutCss.module.css
@@ -55,3 +55,13 @@
     width: 40%;
     float: right;
   }
+
+  .ScrollDown{
+    /* position: fixed; */
+    bottom: 100px;
+    width: 50px;
+}
+.ScrollTop{
+  bottom: 120px;
+  width: 50px;
+}
