--- a/my-app/src/styles/MainPageCss.css
+++ b/my-app/src/styles/MainPageCss.css
@@ -108,7 +108,6 @@
         float: right !important;
     }
     .Rank .RankImg{
-        width: 60vw;
     }
     .HHH{
         margin-top: 6%;
@@ -210,9 +209,7 @@
         width:12vw !important;
         float: left !important;
     }
-    .Rank .RankImg{
-        width: 70vw !important;
-    }
+
     .RBox{
         float: left;
         width: 40% !important;
@@ -540,8 +537,8 @@ tr{
 
 .RankImg img{
     float: left;
-    width: 15%;
-    height:60px;
+    width: 55px;
+    height:55px;
     border-radius: 5px;
 }
 .RankNum{
