--- a/my-app/src/pages/WebToonPage/styles/WebToonPageCss.css
+++ b/my-app/src/pages/WebToonPage/styles/WebToonPageCss.css
@@ -1,4 +1,5 @@
 @media screen and (max-width:721px) and (min-width:362px) {
+
     .WebToonPage{
         width: 720px !important;
         margin: 0 auto;
@@ -13,8 +14,8 @@
         float: left;
     }
     .WebToonCut img {
-        width: 360px !important;
-        margin-left: 27%;
+        width: 330px !important;
+        margin-left: 30% !important;
         margin-right: 27%;
     }
 
@@ -46,6 +47,7 @@
         width:80% !important;
         float: left;
     }
+
 }
 .WebToonPage{
     width: 360px;
@@ -61,7 +63,8 @@
     margin: 0 auto;
 }
 .WebToonCut img{
-    width: 125%;
+    width: 330px;
     height: 900px;
+    margin-left: 15px;
 }
 
