--- a/my-app/src/Component/Tag/styles/TagCss.css
+++ b/my-app/src/Component/Tag/styles/TagCss.css
@@ -5,6 +5,7 @@
     margin: 0 auto;
 }
 .tagItem{
+
     width: 100%;
     float: left;
 }
@@ -66,4 +67,8 @@
 
     }
 
+}
+
+#tagtop{
+    margin-top: 30px;
 }
