--- a/my-app/src/pages/ListPage/styles/ListPageCss.css
+++ b/my-app/src/pages/ListPage/styles/ListPageCss.css
@@ -295,7 +295,7 @@
 }
 .ListImgBox img{
     float: left;
-    background-color: rgba(128, 128, 128, 0.209);
+    background-color: rgba(159, 142, 142,0.4);
     width: 100%;
     height: 300px;
     object-fit: contain;
