--- a/my-app/src/pages/WebToonPage/styles/WebToonPageCss.css
+++ b/my-app/src/pages/WebToonPage/styles/WebToonPageCss.css
@@ -7,16 +7,18 @@
     }
     .WebToonBox{
         width: 80% !important;
+        margin: 0 auto;
+
         
     }
     .WebToonCut{
-        width:80% !important;
+        width:100% !important;
         float: left;
+        margin-bottom: -6px !important;
+
     }
     .WebToonCut img {
-        width: 330px !important;
-        margin-left: 30% !important;
-        margin-right: 27%;
+        margin-left: 20% !important;
     }
 
 }
@@ -48,23 +50,28 @@
         float: left;
     }
 
+    .WebToonCut img{
+        margin-left: 24% !important;
+    }
+
 }
 .WebToonPage{
     width: 360px;
     margin: 0 auto;
 }
 .WebToonBox{
-    width: 80%;
+    width: 100%;
     float: left;
 }
 
 .WebToonCut{
     width: 100%;
     margin: 0 auto;
+    margin-bottom: -5px;
 }
 .WebToonCut img{
-    width: 330px;
-    height: 900px;
-    margin-left: 15px;
+    object-fit: contain;
+    margin: 0;
+    padding: 0;
 }
 
